--- a/styles/data.css
+++ b/styles/data.css
@@ -18,12 +18,12 @@ img {
 }
 
 .time-button {
-    width: 60px;
+    width: 50px;
     margin-left: 10px;
 }
 
 .category-button {
-    width: 51px;
+    width: 45px;
     margin-left: 5px;
 }
 
